# disha

./: .env  AVATAR_GUIDE.md  AVATAR_LIPSYNC_GUIDE.md  DISHAMemory.py  GEMINI_MIGRATION.md  GEMINI_SETUP.md  MULTILANGUAGE_GUIDE.md  README.md  README_NEW.md  START_DISHA.ps1  check_models.py  disha_avatar.py  disha_avatar_viewer.html  disha_live2d_viewer.html  disha_minimal.py  emotion_engine.py  language_handler.py  main.py  package-lock.json  pyproject.toml  repo.md  requirements.txt  setup_gemini.ps1  user_config.json  user_config.py
c001_f_costume_kouma/: c001_f_costume_kouma.moc3  c001_f_costume_kouma.model3.json  c001_f_costume_kouma.vtube.json  items_pinned_to_model.json
c001_f_costume_kouma/motions/: 00_nomal.motion3.json  01_angry.motion3.json  02_fun.motion3.json  03_surprised.motion3.json  04_sad.motion3.json  05_sleep.motion3.json  06_tojime.motion3.json  07_tere.motion3.json  I_angry_motion_01.motion3.json  I_f_sad__motion_01.motion3.json  I_f_surprised_motion_01.motion3.json  I_fun_motion_01.motion3.json  I_idling_motion_01.motion3.json  I_repeat_motion_01.motion3.json
train/: train_emotion.py
